Добавлено предупреждение о перезагрузке страницы. Честно:  мне лень ковыряться в этом говнокоде

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div id="menu">
 Введите дату Вашего рождения: <input type="text" id="start_date" placeholder="Формат: дд.мм.гггг"> 
-<input type="button" id="btn_test" value="Расчитать!"><br>
+<input type="button" id="btn_test" value="Расчитать!"> (после каждого использования перезагружайте страницу!)<br>
 </div>
 
 <canvas id='canvas' width="0" height="0">1</canvas>
